Call Client::shutdown() in server shutdown cmd. SERVER-571